--- a/wiki/ApiGetGame.wiki
+++ b/wiki/ApiGetGame.wiki
@@ -26,306 +26,85 @@ Parameters:
 *platform* (string) _(optional)_: Platform to filter results by, Alpha-Numeric characters only, See this wiki article for a list of valid platforms [API_ValidPlatformsList]
 
 _example request_:
-`http://thegamesdb.net/api/GetGame.php?name=halo`
+`http://thegamesdb.net/api/GetGame.php?id=170`
 
 _example result_:
 
 {{{
 <?xml version="1.0" encoding="UTF-8" ?>
+
 <Data>
-<baseImgUrl>http://thegamesdb.net/banners/</baseImgUrl>
-<Game>
-<id>1</id>
-<GameTitle>Halo: Combat Evolved</GameTitle>
-<Platform>PC</Platform>
-<ReleaseDate>11/15/2001</ReleaseDate>
-<Overview>
-In Halo's twenty-sixth century setting, the player assumes the role of the Master Chief, a cybernetically enhanced super-soldier. The player is accompanied by Cortana, an artificial intelligence who occupies the Master Chief's neural interface. Players battle various aliens on foot and in vehicles as they attempt to uncover the secrets of the eponymous Halo, a ring-shaped artificial planet.
-</Overview>
-<ESRB>T - Teen</ESRB>
-<Genres>
-<genre>Shooter</genre>
-</Genres>
-<Players>4</Players>
-<Publisher>Microsoft Game Studios</Publisher>
-<Developer>Bungie</Developer>
-<Rating>7</Rating>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-1.jpg</vignette>
-<thumb>fanart/thumb/1-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-2.jpg</vignette>
-<thumb>fanart/thumb/1-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-3.jpg</vignette>
-<thumb>fanart/thumb/1-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-4.jpg</vignette>
-<thumb>fanart/thumb/1-4.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-5.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-5.jpg</vignette>
-<thumb>fanart/thumb/1-5.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/1-6.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/1-6.jpg</vignette>
-<thumb>fanart/thumb/1-6.jpg</thumb>
-</fanart>
-<boxart side="front" width="256" height="331">boxart/original/front/1-1.jpg</boxart>
-<banner width="760" height="140">graphical/1-g.jpg</banner>
-</Images>
-</Game>
-<Game>
-<id>9</id>
-<GameTitle>Halo 2</GameTitle>
-<Platform>PC</Platform>
-<ReleaseDate>11/09/2004</ReleaseDate>
-<Overview>
-Halo 2 is the sequel to the highly successful and critically acclaimed Halo®: Combat Evolved. In Halo 2, the saga continues as Master Chief—a genetically enhanced super-soldier—is the only thing standing between the relentless Covenant and the destruction of all humankind.
-</Overview>
-<ESRB>M - Mature</ESRB>
-<Genres>
-<genre>Action</genre>
-</Genres>
-<Players>2</Players>
-<Publisher>Microsoft</Publisher>
-<Developer>Bungie</Developer>
-<Rating>10</Rating>
-<Images>
-<fanart>
-<original width="1280" height="720">fanart/original/9-1.jpg</original>
-<vignette width="1280" height="720">fanart/vignette/9-1.jpg</vignette>
-<thumb>fanart/thumb/9-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1280" height="720">fanart/original/9-2.jpg</original>
-<vignette width="1280" height="720">fanart/vignette/9-2.jpg</vignette>
-<thumb>fanart/thumb/9-2.jpg</thumb>
-</fanart>
-<boxart side="front" width="256" height="319">boxart/original/front/9-1.jpg</boxart>
-</Images>
-</Game>
-<Game>
-<id>90</id>
-<GameTitle>Halo 3</GameTitle>
-<Platform>Microsoft Xbox 360</Platform>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/90-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/90-1.jpg</vignette>
-<thumb>fanart/thumb/90-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/90-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/90-2.jpg</vignette>
-<thumb>fanart/thumb/90-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/90-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/90-3.jpg</vignette>
-<thumb>fanart/thumb/90-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/90-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/90-4.jpg</vignette>
-<thumb>fanart/thumb/90-4.jpg</thumb>
-</fanart>
-</Images>
-</Game>
-<Game>
-<id>193</id>
-<GameTitle>Halo 3: ODST</GameTitle>
-<Platform>Microsoft Xbox 360</Platform>
-<Genres>
-<genre>Action</genre>
-</Genres>
-<Publisher>Microsoft</Publisher>
-<Developer>Bungie</Developer>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-1.jpg</vignette>
-<thumb>fanart/thumb/193-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-2.jpg</vignette>
-<thumb>fanart/thumb/193-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-3.jpg</vignette>
-<thumb>fanart/thumb/193-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-4.jpg</vignette>
-<thumb>fanart/thumb/193-4.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-5.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-5.jpg</vignette>
-<thumb>fanart/thumb/193-5.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-6.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-6.jpg</vignette>
-<thumb>fanart/thumb/193-6.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/193-7.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/193-7.jpg</vignette>
-<thumb>fanart/thumb/193-7.jpg</thumb>
-</fanart>
-</Images>
-</Game>
-<Game>
-<id>638</id>
-<GameTitle>Halo: Reach</GameTitle>
-<Platform>Microsoft Xbox 360</Platform>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-1.jpg</vignette>
-<thumb>fanart/thumb/638-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-2.jpg</vignette>
-<thumb>fanart/thumb/638-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-3.jpg</vignette>
-<thumb>fanart/thumb/638-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-4.jpg</vignette>
-<thumb>fanart/thumb/638-4.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-5.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-5.jpg</vignette>
-<thumb>fanart/thumb/638-5.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-6.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-6.jpg</vignette>
-<thumb>fanart/thumb/638-6.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/638-7.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/638-7.jpg</vignette>
-<thumb>fanart/thumb/638-7.jpg</thumb>
-</fanart>
-</Images>
-</Game>
-<Game>
-<id>847</id>
-<GameTitle>Halo Wars</GameTitle>
-<Platform>Microsoft Xbox 360</Platform>
-<ReleaseDate>03/03/2009</ReleaseDate>
-<Overview>
-The year is 2531, twenty years prior to the events in Halo: Combat Evolved and the Covenant have found something on the planet Garvest. The UNSC ship "Spirit of Fire" is sent to investigate and stop whatever the enemy is up to. What the crew finds could be the only thing that stands between humanity and certain annihilation by the Covenant. Command large armies, lead them into battle, control their every move and use their abilities to gain the upper hand in combat.
-</Overview>
-<ESRB>T - Teen</ESRB>
-<Genres>
-<genre>Strategy</genre>
-</Genres>
-<Publisher>Microsoft Game Studios</Publisher>
-<Developer>Ensemble Studios</Developer>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/847-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/847-1.jpg</vignette>
-<thumb>fanart/thumb/847-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/847-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/847-2.jpg</vignette>
-<thumb>fanart/thumb/847-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/847-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/847-3.jpg</vignette>
-<thumb>fanart/thumb/847-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/847-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/847-4.jpg</vignette>
-<thumb>fanart/thumb/847-4.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/847-5.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/847-5.jpg</vignette>
-<thumb>fanart/thumb/847-5.jpg</thumb>
-</fanart>
-</Images>
-</Game>
+  <baseImgUrl>http://thegamesdb.net/banners/</baseImgUrl>
+  <Game>
+    <id>170</id>
+    <GameTitle>New Super Mario Bros. Wii</GameTitle>
+    <Platform>Nintendo Wii</Platform>
+    <Overview>The game follows the traditional storyline of Princess Peach getting kidnapped by Bowser and his children, the Koopalings and Bowser Jr. When Mario, Luigi, Blue Toad, and Yellow Toad are celebrating Princess Peach's birthday in her castle, a large cake rolls in. Immediately, Bowser Jr. and the Koopalings pop out and throw the cake on top of Peach, trapping her. The cake is loaded onto Bowser's airship and it takes off, with Mario, Luigi, and the Toads giving chase. The Toads in the castle then grant them access to the Propeller and Penguin Suits via a cannon.</Overview>
+    <ESRB>E - Everyone</ESRB>
+    <Genres>
+      <genre>Adventure</genre>
+      <genre>Sandbox</genre>
+    </Genres>
+    <Players>4+</Players>
+    <Co-op>No</Co-op>
+    <Youtube>http://www.youtube.com/watch?v=BrtpflukHSg&amp;hd=1</Youtube>
+    <Publisher>Nintendo</Publisher>
+    <Developer>Nintendo</Developer>
+    <Rating>10</Rating>
+    <Images>
+      <fanart>
+        <original width="1920" height="1080">fanart/original/170-1.jpg</original>
+        <vignette width="1920" height="1080">fanart/vignette/170-1.jpg</vignette>
+        <thumb>fanart/thumb/170-1.jpg</thumb>
+      </fanart>
+      <fanart>
+        <original width="1920" height="1080">fanart/original/170-2.jpg</original>
+        <vignette width="1920" height="1080">fanart/vignette/170-2.jpg</vignette>
+        <thumb>fanart/thumb/170-2.jpg</thumb>
+      </fanart>
+      <fanart>
+        <original width="1920" height="1080">fanart/original/170-3.jpg</original>
+        <vignette width="1920" height="1080">fanart/vignette/170-3.jpg</vignette>
+        <thumb>fanart/thumb/170-3.jpg</thumb>
+      </fanart>
+      <fanart>
+        <original width="1920" height="1080">fanart/original/170-4.jpg</original>
+        <vignette width="1920" height="1080">fanart/vignette/170-4.jpg</vignette>
+        <thumb>fanart/thumb/170-4.jpg</thumb>
+      </fanart>
+      <boxart side="back" width="1531" height="2126">boxart/original/back/170-2.jpg</boxart>
+      <boxart side="front" width="1530" height="2126">boxart/original/front/170-1.jpg</boxart>
+      <banner width="760" height="140">graphical/170-g.jpg</banner>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-1.jpg</original>
+        <thumb>screenshots/thumb/170-1.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-2.jpg</original>
+        <thumb>screenshots/thumb/170-2.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-3.jpg</original>
+        <thumb>screenshots/thumb/170-3.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-5.jpg</original>
+        <thumb>screenshots/thumb/170-5.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-6.jpg</original>
+        <thumb>screenshots/thumb/170-6.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-7.jpg</original>
+        <thumb>screenshots/thumb/170-7.jpg</thumb>
+      </screenshot>
+      <screenshot>
+        <original width="832" height="456">screenshots/170-8.jpg</original>
+        <thumb>screenshots/thumb/170-8.jpg</thumb>
+      </screenshot>
+    </Images>
+  </Game>
 </Data>
-}}}
 
-
-_example request_:
-`http://thegamesdb.net/api/GetGame.php?id=2`
-
-_example result_:
-
-{{{
-<?xml version="1.0" encoding="UTF-8" ?>
-<Data>
-<baseImgUrl>http://thegamesdb.net/banners/</baseImgUrl>
-<Game>
-<id>2</id>
-<GameTitle>Crysis</GameTitle>
-<Platform>PC</Platform>
-<ReleaseDate>11/13/2007</ReleaseDate>
-<Overview>
-From the makers of Far Cry, Crysis offers FPS fans the best-looking, most highly-evolving gameplay, requiring the player to use adaptive tactics and total customization of weapons and armor to survive in dynamic, hostile environments including Zero-G. Earth, 2019. A team of US scientists makes a frightening discovery on an island in the South China Sea. All contact with the team is lost when the North Korean Government quickly seals off the area. The United States responds by dispatching an elite team of Delta Force Operators to recon the situation. As tension rises between the two nations, a massive alien ship reveals itself in the middle of the island. The ship generates an immense force sphere that freezes a vast portion of the island and drastically alters the global weather system. Now the US and North Korea must join forces to battle the alien menace. With hope rapidly fading, you must fight epic battles through tropical jungle, frozen landscapes, and finally into the heart of the alien ship itself for the ultimate Zero G showdown.
-</Overview>
-<ESRB>M - Mature</ESRB>
-<Genres>
-<genre>Shooter</genre>
-</Genres>
-<Players>4</Players>
-<Publisher>Electronic Arts</Publisher>
-<Developer>Crytek</Developer>
-<Rating>8</Rating>
-<Images>
-<fanart>
-<original width="1920" height="1080">fanart/original/2-1.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/2-1.jpg</vignette>
-<thumb>fanart/thumb/2-1.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/2-2.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/2-2.jpg</vignette>
-<thumb>fanart/thumb/2-2.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/2-3.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/2-3.jpg</vignette>
-<thumb>fanart/thumb/2-3.jpg</thumb>
-</fanart>
-<fanart>
-<original width="1920" height="1080">fanart/original/2-4.jpg</original>
-<vignette width="1920" height="1080">fanart/vignette/2-4.jpg</vignette>
-<thumb>fanart/thumb/2-4.jpg</thumb>
-</fanart>
-<boxart side="front" width="1525" height="2160">boxart/original/front/2-1.jpg</boxart>
-<banner width="760" height="140">graphical/2-g2.jpg</banner>
-</Images>
-</Game>
-</Data>
 }}}
